[gd_scene load_steps=11 format=3 uid="uid://byy8027e326wd"]

[ext_resource type="Texture2D" uid="uid://b7soluh72vjfa" path="res://assets/image/game/animal/png/round/panda.png" id="1_3e4ed"]
[ext_resource type="Texture2D" uid="uid://c1bd0fcvhdp" path="res://assets/image/game/animal/png/round_outline/panda.png" id="2_hxejm"]
[ext_resource type="Script" path="res://scenes/scene/game_scene/game_content/game_button/game_button.gd" id="3_3q41s"]
[ext_resource type="PackedScene" uid="uid://b4b36g3uhwemg" path="res://scenes/component/audio/button_audio/button_audio.tscn" id="3_4ltph"]
[ext_resource type="PackedScene" uid="uid://bpci1qpmsjkbg" path="res://scenes/scene/game_scene/game_content/game_button/click_counter/click_counter.tscn" id="4_4d018"]
[ext_resource type="PackedScene" uid="uid://k6nmnw4kjwjq" path="res://scenes/node/game/particle_queue/particle_queue.tscn" id="6_gyr2f"]
[ext_resource type="PackedScene" uid="uid://crvdmtowmw2sc" path="res://scenes/node/game/particle_queue/particle_emitter/label_particle_emitter/label_particle_emitter.tscn" id="7_72cr5"]

[sub_resource type="Animation" id="Animation_77dwp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:pivot_offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_83ivt"]
resource_name = "float"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [-0.174533, 0.0, 0.174533, 0.0, -0.174533]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:pivot_offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(125, 125), Vector2(62.5, 62.5), Vector2(125, 125), Vector2(62.5, 62.5), Vector2(125, 125)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.9, 0.9), Vector2(1, 1), Vector2(1.1, 1.1), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fhghp"]
_data = {
"RESET": SubResource("Animation_77dwp"),
"float": SubResource("Animation_83ivt")
}

[node name="GameButton" type="TextureButton"]
custom_minimum_size = Vector2(250, 215)
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_left = NodePath("../../MarginContainer1/MenuButton")
focus_neighbor_top = NodePath("../../MarginContainer2/MenuButton")
focus_neighbor_right = NodePath("../../MarginContainer2/MenuButton")
focus_neighbor_bottom = NodePath("../../MarginContainer1/MenuButton")
button_mask = 3
texture_normal = ExtResource("1_3e4ed")
texture_focused = ExtResource("2_hxejm")
ignore_texture_size = true
stretch_mode = 4
script = ExtResource("3_3q41s")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_fhghp")
}
autoplay = "float"

[node name="ButtonAudio" parent="." instance=ExtResource("3_4ltph")]
focus = 3
down = 4
up = 4

[node name="ClickCounter" parent="." instance=ExtResource("4_4d018")]
unique_name_in_owner = true

[node name="ParticleQueue" parent="." instance=ExtResource("6_gyr2f")]
unique_name_in_owner = true
particle_emitter_pck = ExtResource("7_72cr5")
buffer = true
buffer_sum_arguments = Array[int]([1])
lifetime = 3.0
position_offset = Vector2(0.5, 0.5)
particles_modulate = Color(1, 0.498039, 1, 1)
particles_id = "game_button"
